@@ -1,6 +1,6 @@
 /* XPM */
 static char *right[]={
-"16 16 3 1",
+"16 16 3 1 15 0",
 ". c None",
 "a c #000000",
 "# c #ffffff",
